<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Uptime</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="create_game">Create game</string>
    <string name="replay_game">Replay game</string>
    <string name="continue_game">Continue game</string>
    
    <string name="card_current_round">Round #: %1$d</string>
    <string name="card_team">Current team: %1$s</string>
    <string name="card_team_turn_score">Turn score: %1$d</string>
    <string name="card_team_round_score">Round score: %1$d</string>
    <string name="card_team_total_score">Total score: %1$d</string>
    <string name="card_remaining">Remaining cards: %1$d</string>
    <string name="card_remaining_last">Last card!</string>
    <string name="card_found">Found</string>
    <string name="card_skip">Skip</string>
    <string name="card_end_turn">End turn</string>
    
    <string name="score_next_round">Next Round</string>
    <string name="score_continue_round">Continue Round</string>
    <string name="score_title">Score per team</string>
    <string name="score_round_text">Team score</string>
    <string name="score_round_nothing">No Round yet</string>
    <string name="score_round_finished">Round %1$d just finished, next team: %2$s</string>
    <string name="score_round_active">Round %1$d still active, next team: %2$s</string>
    
    <string name="create_title">Set your game settings</string>
    <string name="create_teams">Number of teams:</string>
    <string name="create_team_name">Team name:</string>
    <string name="create_number_of_cards">Number of cards:</string>
    <string name="create_game_debug_mode">Debug mode</string>
    <string name="create_game_import_cards">Import cards</string>
    <string name="button_create_team_name">Create team</string>
    <string name="dialog_create_team_confirm">Team %1$s added to game.</string>
    <string name="dialog_create_team_name_invalid">Invalid name.</string>
    
    <string name="stats_title">Stats for team: %1$s</string>
    <string name="stats_round">Round %1$d: %2$d card(s) found</string>
    <string name="stats_card_number">%1$d</string>
    <string name="stats_next_turn">Next Team: %1$s</string>
    <string name="stats_next_turn_question">End Turn (Next Team: %1$s)?</string>
    <string name="stats_end_round">Finish Round %1$d</string>
    <string name="stats_end_round_question">Finish Round %1$d?</string>
    <string name="stats_card_current_turn">No card found</string>
    
    <string name="dialog_import_file_not_found">No file found, taking hard-coded list</string>
    <string name="dialog_overwrite_current_game">This will cancel current game</string>
    <string name="dialog_overwrite_current_game_confirm">Do you confirm?</string>
    <string name="dialog_confirm_yes">Yes</string>
    <string name="dialog_confirm_no">No</string>
    
    <string name="dialog_cancel_card_not_found">No card was cancelled</string>
    <string name="dialog_cancel_card_current_turn">Last card cancelled</string>
    <string name="dialog_cancel_card_previous_turn">Card cancelled, back to previous turn</string>
    <string name="dialog_cancel_card_previous_round">Card cancelled, back to previous round</string>
    <string name="dialog_card_replaced">Card has been replaced</string>
    <string name="dialog_create_card_ok">Card has been created with id: %1$d</string>
    <string name="dialog_update_card_ok">Card %1$d has been updated</string>
    <string name="dialog_create_card_ko">Missing card information</string>

    <string name="menu_action_change_card">Replace card</string>
    <string name="menu_action_cancel_found_settings">Cancel previous found card</string>

    <string name="menu_game_options">Game options</string>
    <string name="menu_start_new_game">Start a new game</string>
    
    <string name="create_card_title">Create a new card</string>
    <string name="create_card_name">Name to find:</string>
    <string name="create_card_name_hint">Celebrity, place, event &#8230;</string>
    <string name="create_card_category">Category:</string>
    <string name="create_card_category_custom">Custom</string>
    <string name="create_card_confirm">Confirm</string>
    <string name="create_card_active">Card is active</string>
    
    
    <string name="db_number_cards">Number of cards in DB: %1$d</string>
    <string name="db_no_card">No card in DB</string>
    <string name="db_display_card_list">Display cards in DB</string>
    
    <!-- Previous strings  -->
    
<!--     <string name="menu_new">New game</string> -->
<!--     <string name="menu_new_debug">New game (debug)</string> -->
<!--     <string name="menu_new_quick">New quick game</string> -->
<!--     <string name="menu_continue">Continue current game</string> -->
<!--     <string name="menu_launch">Launch game</string> -->
<!--     <string name="menu_back_game">Back to game</string> -->
<!--     <string name="menu_add_player">Add a player</string> -->
<!--     <string name="menu_rename_players">Rename players</string> -->
<!--     <string name="menu_turn_history">Turn history</string> -->
<!--     <string name="menu_score_chart">Score chart</string> -->

<!--     <string name="number_player">Number of players</string> -->
<!--     <string name="default_number_player">3</string> -->

<!--     <string name="player_name">Player name</string> -->
<!--     <string name="player_name_default">Player #</string> -->
<!--     <string name="no_player">No player found</string> -->
<!--     <string name="no_score">No score yet</string> -->

<!--     <string name="score">Score</string> -->
<!--     <string name="board_game">Board game</string> -->
<!--     <string name="rename_player">Rename player</string> -->
<!--     <string name="give_name_player">Player name</string> -->
<!--     <string name="score_to_reach">Target score</string> -->
<!--     <string name="player_score">Player score</string> -->
<!--     <string name="number_of_warmups">Number of warm-up rounds</string> -->
<!--     <string name="default_score_to_reach">5000</string> -->
<!--     <string name="default_warm_up_rounds">3</string> -->

<!--     <string name="add_player">Add player</string> -->
<!--     <string name="add_player_no_score_text">Player will start with no score.</string> -->
<!--     <string name="add_player_score_invalid">Player score must be an even multiple of 50.</string> -->

<!--     <string name="score_board">Round %1$d, total to reach: %2$d</string> -->
<!--     <string name="second_line_player_warmup">Still in warm-up (%1$d).</string> -->
<!--     <string name="second_line_player_zero">zero!</string> -->
<!--     <string name="second_line_player_entering">Entering the game</string> -->
<!--     <string name="second_line_player_last_turn">Last turn score (turn id): %1$d (%2$d)</string> -->

<!--     <string name="dialog_welcome">Number of warm-up rounds: %1$d</string> -->
<!--     <string name="dialog_game_over">Game over!</string> -->
<!--     <string name="dialog_game_really_over">Game is over dude.</string> -->
<!--     <string name="dialog_total_reached">Total reached, ending round.</string> -->

<!--     <string name="dialog_ok">OK</string> -->
<!--     <string name="dialog_player_new_score">"%1$s's new score: %2$s"</string> -->
<!--     <string name="dialog_penalty">Penalty applied!</string> -->
<!--     <string name="penalty_reason_own">Got 2 zeros.</string> -->
<!--     <string name="penalty_reason_other">"%1$s landed on %2$s"</string> -->
<!--     <string name="dialog_next_player">"Next player: %1$s"</string> -->
<!--     <string name="dialog_winner_is">"%1$s wins the game!"</string> -->


<!--     <string name="turn_score_title">Turn # %1$d. %2$s to play.</string> -->
<!--     <string name="turn_score">Turn score</string> -->
<!--     <string name="turn_score_hint">Turn score</string> -->
<!--     <string name="turn_score_hint_warmup">Still in warm-up</string> -->
<!--     <string name="turn_score_invalid">Turn score must be an even multiple of 50.</string> -->
<!--     <string name="turn_score_player">Player %1$s, remaining: %2$s</string> -->
<!--     <string name="turn_score_white_text">White</string> -->
<!--     <string name="turn_score_player_warning">You have a zero!</string> -->
<!--     <string name="default_turn_score">1000</string> -->
<!--     <string name="turn_target">Your target(s) for this turn: </string> -->
<!--     <string name="target_your_score">Your score: %1$s</string> -->
<!--     <string name="target_player">%1$s: %2$s</string> -->
<!--     <string name="submit_turn_score">Validate</string> -->

<!--     <string name="menu_player_statistics">Statistics</string> -->
<!--     <string name="activate_player">Toggle is active</string> -->
<!--     <string name="dialog_no_more_active">No active player in the game.</string> -->
<!--     <string name="dialog_activate_player">Player %1$s is now</string> -->
<!--     <string name="dialog_player_active">active</string> -->
<!--     <string name="dialog_player_non_active">not active</string> -->

<!--     <string name="turn_history">Turn history</string> -->
<!--     <string name="turn_history_title">Player %1$s, turn history.</string> -->
<!--     <string name="turn_history_id">%1$d</string> -->
<!--     <string name="turn_history_first_line">Turn score: %1$d</string> -->
<!--     <string name="turn_history_second_line">white</string> -->

<!--     <string name="game_options">Game options</string> -->
<!--     <string name="dialog_options_score_invalid">New score must be superior to %1$d</string> -->
<!--     <string name="new_total_confirm">New total to reach: %1$s</string> -->
<!--     <string name="submit_options">Validate</string> -->

<!--     <string name="score_chart">Score chart</string> -->
<!--     <string name="score_chart_img_alt">Current game score chart.</string> -->

<!--     Stats -->
<!--     <string name="number_of_rounds">Round(s) played so far</string> -->
<!--     <string name="number_of_rounds_default">No round played</string> -->

<!--     <string name="rank">Current rank</string> -->
<!--     <string name="rank_default">No rank yet</string> -->
<!--     <string name="rank_best">Best rank</string> -->
<!--     <string name="rank_worst">Worst rank</string> -->
<!--     <string name="rank_value">%1$s (round #%2$d)</string> -->

<!--     <string name="zero_penalty">Number of 2 zeros penalty</string> -->
<!--     <string name="zero_penalty_default">No 2 zeros penalty yet</string> -->

<!-- 	<string name="number_of_whites">Number of white(s)</string> -->
<!--     <string name="number_of_whites_default">No white yet</string> -->
    
<!--     <string name="penalty_hit">Player you hit most</string> -->
<!--     <string name="penalty_hit_value">%1$s (%2$d times)</string> -->
<!--     <string name="penalty_victim">Player who hit you most</string> -->
<!--     <string name="penalty_hit_default">No penalty hit yet</string> -->

<!--     <string name="turn_score_current">Current total score</string> -->
<!--     <string name="turn_score_default">No turn score yet</string> -->
<!--     <string name="turn_score_best">Best round score</string> -->
<!--     <string name="turn_score_average">Average round score</string> -->
    
</resources>
