<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity/CardActivity" >

    <TextView
        android:id="@+id/textCardTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_team" />

    <TextView
        android:id="@+id/textCardNameToFind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="90dp"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/buttonFoundCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textCardNameToFind"
        android:layout_below="@+id/textCardNameToFind"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="24dp"
        android:text="@string/card_found" />

    <Button
        android:id="@+id/buttonSkipCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonFoundCard"
        android:layout_alignBottom="@+id/buttonFoundCard"
        android:layout_toRightOf="@+id/textCardNameToFind"
        android:text="@string/card_skip" />

    <Button
        android:id="@+id/buttonEndTurn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonFoundCard"
        android:layout_below="@+id/buttonFoundCard"
        android:layout_marginTop="67dp"
        android:text="@string/card_end_turn" />

</RelativeLayout>