<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".activity/create/CreateGameActivity" >

<!--         <TextView -->
<!--             android:id="@+id/textCreateTitle" -->
<!--             android:layout_width="wrap_content" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:text="@string/create_card_title" /> -->

        <TextView
            android:id="@+id/textCreateCardName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textCreateTitle"
            android:layout_below="@+id/textCreateTitle"
            android:layout_marginTop="26dp"
            android:text="@string/create_card_name" />

        <EditText
            android:id="@+id/editCreateCardName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textCreateCardName"
            android:layout_below="@+id/textCreateCardName"
            android:ems="10"
            android:hint="@string/create_card_name_hint" />

        <TextView
            android:id="@+id/textCreateCardCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editCreateCardName"
            android:layout_below="@+id/editCreateCardName"
            android:layout_marginTop="26dp"
            android:text="@string/create_card_category" />


        <TextView
            android:id="@+id/textCreateCardCategoryCustom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textCreateCardCategory"
            android:layout_below="@+id/textCreateCardCategory"
            android:layout_marginTop="26dp"
            android:text="@string/create_card_category_custom" />
        
        
<!--         <EditText -->
<!--             android:id="@+id/ecitCreateCardCategory" -->
<!--             android:layout_width="wrap_content" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:layout_alignLeft="@+id/ecitCreateCardCategory" -->
<!--             android:layout_below="@+id/textCreateCardCategory" -->
<!--             android:ems="10"  -->
<!--             android:hint="@string/create_card_category_hint" > -->
<!--         </EditText> -->

        <CheckBox
            android:id="@+id/checkBoxCardActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textCreateCardCategoryCustom"
            android:layout_below="@+id/textCreateCardCategoryCustom"
            android:checked="true"
            android:text="@string/create_card_active" />

        <Button
            android:id="@+id/buttonConfirmCreateCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textCreateCardCategoryCustom"
            android:layout_below="@+id/textCreateCardCategoryCustom"
            android:layout_marginTop="37dp"
            android:text="@string/create_card_confirm" />

    </RelativeLayout>

</ScrollView>