<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity/CardActivity" >

    <TextView
        android:id="@+id/textScoreTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_title" />

    <Button
        android:id="@+id/buttonNextRound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textScoreTitle"
        android:layout_below="@+id/textScoreBoard"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="133dp"
        android:text="@string/score_next_round" />

    <TextView
        android:id="@+id/textScoreBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textScoreTitle"
        android:layout_below="@+id/textScoreTitle"
        android:layout_marginTop="20dp"
        android:text="@string/score_team" />

    <Button
        android:id="@+id/button100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonNextRound"
        android:layout_marginTop="51dp"
        android:layout_toRightOf="@+id/textScoreBoard"
        android:text="Button" />

<!--     <TableLayout -->
<!--         android:id="@+id/tableScore" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:layout_alignLeft="@+id/buttonNextRound" -->
<!--         android:layout_below="@+id/textScoreBoard" -->
<!--         android:layout_marginLeft="17dp" -->
<!--         android:layout_marginTop="28dp" > -->

<!--         <TableRow -->
<!--             android:id="@+id/tableRow1" -->
<!--             android:layout_width="wrap_content" -->
<!--             android:layout_height="wrap_content" > -->

<!-- 		    <TextView -->
<!-- 		        android:id="@+id/textTableTeamName" -->
<!-- 		        android:layout_width="wrap_content" -->
<!-- 		        android:layout_height="wrap_content" -->
<!-- 		        android:text="Team" /> -->
<!-- 		    <TextView -->
<!-- 		        android:id="@+id/textTableRound1" -->
<!-- 		        android:layout_width="wrap_content" -->
<!-- 		        android:layout_height="wrap_content" -->
<!-- 		        android:text="1" /> -->
<!-- 		    <TextView -->
<!-- 		        android:id="@+id/textTableRound2" -->
<!-- 		        android:layout_width="wrap_content" -->
<!-- 		        android:layout_height="wrap_content" -->
<!-- 		        android:text="2" /> -->
<!-- 		    <TextView -->
<!-- 		        android:id="@+id/textTableRound3" -->
<!-- 		        android:layout_width="wrap_content" -->
<!-- 		        android:layout_height="wrap_content" -->
<!-- 		        android:text="3" /> -->
<!-- 		    <TextView -->
<!-- 		        android:id="@+id/textTableTotal" -->
<!-- 		        android:layout_width="wrap_content" -->
<!-- 		        android:layout_height="wrap_content" -->
<!-- 		        android:text="Total" /> -->
<!--         </TableRow> -->
<!--     </TableLayout> -->

    <Button
        android:id="@+id/buttonNewGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button100"
        android:layout_alignBottom="@+id/button100"
        android:layout_below="@+id/textScoreBoard"
        android:layout_marginLeft="19dp"
        android:layout_toRightOf="@+id/button100"
        android:text="@string/create_game" />

</RelativeLayout>